--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "echarts": "^3.6.2",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-vue": "^2.1.0",
@@ -19,6 +20,7 @@
     "quasar-extras": "0.x",
     "quasar-framework": "git+https://git@github.com/quasarframework/quasar-edge.git",
     "vue": "^2.3.0",
+    "vue-echarts": "^2.4.0",
     "vue-router": "^2.0.0",
     "vue-types": "^1.0.1",
     "vuex": "^2.3.1"
