--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "lint-fix": "eslint --fix --ext .js,.vue src"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-runtime": "^6.0.0",
     "echarts": "^3.6.2",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-vue": "^2.1.0",
+    "eslint-plugin-vue": "beta",
     "quasar": "0.0.18",
     "quasar-extras": "0.x",
     "quasar-framework": "git+https://git@github.com/quasarframework/quasar-edge.git",
@@ -37,7 +38,7 @@
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.28.0",
     "es6-promise": "^4.1.1",
-    "eslint": "^3.0.1",
+    "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^2.0.5",
     "eslint-loader": "^1.3.0",
