--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "quasar-framework": "git+https://git@github.com/quasarframework/quasar-edge.git",
     "vue": "^2.3.0",
     "vue-echarts": "^2.4.0",
+    "vue-resize-directive": "^1.0.0",
     "vue-router": "^2.0.0",
     "vue-types": "^1.0.1",
     "vuex": "^2.3.1"
