--- a/package.json
+++ b/package.json
@@ -12,25 +12,19 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "babel-runtime": "^6.0.0",
-    "echarts": "^3.6.2",
-    "eslint-config-airbnb-base": "^11.2.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "beta",
+    "babel-runtime": "^6.25.0",
     "plotly.js": "^1.28.3",
     "quasar-extras": "0.x",
-    "quasar-framework": "git+https://git@github.com/quasarframework/quasar-edge.git",
-    "vue": "^2.3.0",
-    "vue-echarts": "^2.4.0",
+    "quasar-framework": "^0.14.1",
     "vue-resize-directive": "^1.0.0",
-    "vue-router": "^2.0.0",
+    "vue-router": "^2.7.0",
     "vue-types": "^1.0.1",
+    "vue": "~2.3.4",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
     "axios-mock-adapter": "^1.9.0",
+    "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-eslint": "^7.0.0",
     "babel-loader": "^7.0.0",
@@ -42,36 +36,39 @@
     "css-loader": "^0.28.0",
     "es6-promise": "^4.1.1",
     "eslint": "^4.5.0",
-    "eslint-config-standard": "^10.2.1",
+    "eslint-config-airbnb-base": "^11.2.0",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-html": "^3.2.0",
-    "eslint-plugin-import": "^2.2.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-html": "^3.1.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.3.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-vue": "beta",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.13.3",
+    "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
-    "html-webpack-plugin": "^2.8.1",
+    "glob": "^7.1.2",
+    "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.0",
-    "json-loader": "^0.5.4",
+    "json-loader": "^0.5.7",
     "opn": "^5.0.0",
-    "optimize-css-assets-webpack-plugin": "^3.1.1",
-    "postcss-loader": "^2.0.6",
-    "progress-bar-webpack-plugin": "^1.9.0",
-    "purify-css": "^1.2.2",
+    "optimize-css-assets-webpack-plugin": "^3.0.0",
+    "postcss-loader": "^1.0.0",
+    "progress-bar-webpack-plugin": "^1.10.0",
+    "purify-css": "^1.2.6",
     "shelljs": "^0.7.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "url-loader": "^0.5.7",
-    "vue-loader": "^13.0.4",
+    "vue-loader": "~12.2.2",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.0",
-    "webpack": "^3.5.5",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.17.0",
-    "webpack-merge": "^4.0.0"
+    "vue-template-compiler": "~2.3.4",
+    "webpack": "^3.5.2",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-merge": "^4.1.0"
   }
 }
