--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "vue-i18n": "^7.3.3"
   },
   "devDependencies": {
+    "@types/core-js": "^0.9.46",
+    "@types/node": "^9.4.6",
     "babel-eslint": "8.2.1",
     "eslint": "4.15.0",
     "eslint-config-airbnb-base": "11.3.0",
