--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "BrewPi B.V.",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext .js,.vue src",
+    "lint": "eslint --ext .js,.vue,.ts src",
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
@@ -22,10 +22,12 @@
     "eslint-friendly-formatter": "3.0.0",
     "eslint-loader": "1.7.1",
     "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-typescript": "^0.8.1",
     "eslint-plugin-vue": "4.0.0",
     "quasar-cli": "^0.15.0-beta.36",
     "ts-loader": "^3.5.0",
-    "typescript": "^2.7.1"
+    "typescript": "^2.7.1",
+    "typescript-eslint-parser": "^13.0.0"
   },
   "engines": {
     "node": ">= 8.9.0",
