--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "vue-i18n": "^7.3.3"
+    "vue-i18n": "^7.3.3",
+    "vuex-typescript": "^3.0.2"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.46",
-    "@types/node": "^9.4.6",
     "babel-eslint": "8.2.1",
     "eslint": "4.15.0",
     "eslint-config-airbnb-base": "11.3.0",
