--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/core-js": "^0.9.46",
     "babel-eslint": "8.2.1",
+    "connect-api-mocker": "^1.3.6",
     "eslint": "4.15.0",
     "eslint-config-airbnb-base": "11.3.0",
     "eslint-friendly-formatter": "3.0.0",
