--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "strict": true,
-    "module": "esnext",
-    "lib": ["es2015"],
+    "lib": ["ESNext", "DOM"],
     "moduleResolution": "node",
     "sourceMap": true
   }
