--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "vue-i18n": "^7.3.3",
+    "vue-types": "^1.1.3",
     "vuex-typescript": "^3.0.2"
   },
   "devDependencies": {
