--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,6 @@
     [ "env", {"modules": false} ],
     "stage-2"
   ],
-  "plugins": ["transform-runtime"],
+  "plugins": ["transform-runtime", "transform-decorators"],
   "comments": false
 }
