--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "vue-class-component": "^6.2.0",
     "vue-i18n": "^7.3.3",
     "vuex-typescript": "^3.0.2"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.46",
     "babel-eslint": "8.2.1",
+    "babel-plugin-transform-decorators": "^6.24.1",
     "connect-api-mocker": "^1.3.6",
     "eslint": "4.15.0",
     "eslint-config-airbnb-base": "11.3.0",
