--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-typescript": "^0.8.1",
     "eslint-plugin-vue": "4.0.0",
-    "quasar-cli": "^0.15.3",
+    "quasar-cli": "^0.15.0-beta.42",
     "ts-loader": "^3.5.0",
     "typescript": "^2.7.1",
     "typescript-eslint-parser": "^13.0.0"
