--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "lodash": "^4.17.5",
-    "plotly.js": "^1.35.1",
     "vue-class-component": "^6.2.0",
     "vue-i18n": "^7.3.3",
+    "vue-plotly.js": "^1.0.0",
     "vuex-typescript": "^3.0.2"
   },
   "devDependencies": {
