--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.5",
+    "portal-vue": "^1.3.0",
     "vue-class-component": "^6.2.0",
     "vue-i18n": "^7.3.3",
     "vue-plotly.js": "^1.0.8",
