--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eslint": "eslint --ext .js,.vue src",
     "tslint": "tslint -c tslint.json 'src/**/*.ts'",
     "lint": "npm run eslint && npm run tslint",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "jest src && npm run lint"
   },
   "dependencies": {
     "lodash": "^4.17.5",
@@ -42,7 +42,8 @@
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.8.0",
     "typescript": "^2.8.1",
-    "typescript-eslint-parser": "^13.0.0"
+    "typescript-eslint-parser": "^13.0.0",
+    "vue-jest": "^2.3.0"
   },
   "engines": {
     "node": ">= 8.9.0",
@@ -56,7 +57,8 @@
   "jest": {
     "browser": true,
     "transform": {
-      "^.+\\.tsx?$": "ts-jest"
+      "^.+\\.tsx?$": "ts-jest",
+      ".*\\.(vue)$": "vue-jest"
     },
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
     "moduleFileExtensions": [
