--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,14 @@
 .thumbs.db
 node_modules
 /dist
+
+/tests/e2e/videos/
+/tests/e2e/screenshots/
+
 /src-cordova/platforms
 /src-cordova/plugins
 /src-cordova/www
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
