--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
     "e2e:open": "vue-cli-service e2e:open"
   },
   "dependencies": {
+    "portal-vue": "^1.3.0",
+    "quasar-cli": "^0.15.14",
+    "quasar-extras": "^1.0.2",
+    "quasar-framework": "^0.15.10",
     "vue": "^2.5.13",
     "vue-class-component": "^6.0.0",
+    "vue-i18n": "^7.6.0",
+    "vue-plotly.js": "^1.0.8",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-typescript": "^3.0.2"
   },
   "devDependencies": {
     "@types/jest": "^22.0.1",
