--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "e2e:open": "vue-cli-service e2e:open"
   },
   "dependencies": {
+    "connect-api-mocker": "^1.3.6",
     "portal-vue": "^1.3.0",
     "quasar-cli": "^0.15.14",
     "quasar-extras": "^1.0.2",
