--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "cli-test",
-  "version": "0.1.0",
-  "private": true,
+  "name": "brewblox-ui",
+  "version": "0.0.1",
+  "description": "UI for the BrewBlox brewing controller",
+  "author": "Elco Jacobs / BrewPi B.V.",
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
@@ -12,6 +13,7 @@
   },
   "dependencies": {
     "connect-api-mocker": "^1.3.6",
+    "plotly.js": "^1.35.2",
     "portal-vue": "^1.3.0",
     "quasar-cli": "^0.15.14",
     "quasar-extras": "^1.0.2",
