use ts-lint as linting option

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vue-cli-service build",
     "test": "vue-cli-service test",
     "e2e": "vue-cli-service e2e",
-    "lint": "eslint --ext .js,.ts,.vue src",
+    "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "e2e:open": "vue-cli-service e2e:open"
   },
   "engines": {
