--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
-    "test": "vue-cli-service test",
+    "test": "jest",
     "e2e": "vue-cli-service e2e",
     "lint": "tslint -c tslint.json 'src/**/*.ts'",
     "e2e:open": "vue-cli-service e2e:open"
