--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vue/eslint-config-typescript": "^3.0.0-beta.6",
     "@vue/test-utils": "^1.0.0-beta.10",
     "babel-core": "^7.0.0-0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "connect-api-mocker": "^1.3.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
