--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@vue/eslint-config-typescript": "^3.0.0-beta.6",
     "@vue/test-utils": "^1.0.0-beta.10",
     "babel-core": "^7.0.0-0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "ts-jest": "^22.0.1",
