--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "portal-vue": "^1.3.0",
     "quasar-extras": "^1.0.2",
     "quasar-framework": "^0.15.10",
+    "url-safe-string": "^1.1.0",
     "vue": "^2.5.13",
     "vue-class-component": "^6.0.0",
     "vue-i18n": "^7.6.0",
