--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-plotly.js": "^1.0.8",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
+    "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
     "vuex-typescript": "^3.0.2"
   },
