--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "npm": ">= 5.6.0"
   },
   "dependencies": {
+    "@types/shortid": "0.0.29",
     "plotly.js": "^1.35.2",
     "portal-vue": "^1.3.0",
     "quasar-extras": "^1.0.2",
     "quasar-framework": "^0.15.10",
+    "shortid": "^2.2.8",
     "url-safe-string": "^1.1.0",
     "vue": "^2.5.16",
     "vue-class-component": "^6.0.0",
