--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@types/shortid": "0.0.29",
+    "lodash": "^4.17.10",
     "plotly.js": "^1.35.2",
     "portal-vue": "^1.3.0",
     "quasar-extras": "^1.0.2",
