--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     "class-methods-use-this": 0,
     "strict": 0,
     "no-param-reassign": 0,
+    "no-restricted-globals": 0,
 
     // allow debugger during development
     "no-debugger": 2,
