--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
   },
   "devDependencies": {
     "@types/jest": "^22.0.1",
-    "@vue/cli-plugin-babel": "^3.0.0-beta.9",
-    "@vue/cli-plugin-e2e-cypress": "^3.0.0-beta.9",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.9",
-    "@vue/cli-plugin-typescript": "^3.0.0-beta.9",
-    "@vue/cli-plugin-unit-jest": "^3.0.0-beta.9",
-    "@vue/cli-service": "^3.0.0-beta.9",
-    "@vue/eslint-config-airbnb": "^3.0.0-beta.9",
-    "@vue/eslint-config-typescript": "^3.0.0-beta.9",
+    "@vue/cli-plugin-babel": "^3.0.0-rc.3",
+    "@vue/cli-plugin-e2e-cypress": "^3.0.0-rc.3",
+    "@vue/cli-plugin-eslint": "^3.0.0-rc.3",
+    "@vue/cli-plugin-typescript": "^3.0.0-rc.3",
+    "@vue/cli-plugin-unit-jest": "^3.0.0-rc.3",
+    "@vue/cli-service": "^3.0.0-rc.3",
+    "@vue/eslint-config-airbnb": "^3.0.0-rc.3",
+    "@vue/eslint-config-typescript": "^3.0.0-rc.3",
     "@vue/test-utils": "^1.0.0-beta.10",
     "babel-core": "^7.0.0-0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
