--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
     "no-debugger": 2,
 
     // for eslint + typescript to work:
-    "typescript/no-unused-vars": 1
+    "typescript/no-unused-vars": 1,
+    "space-infix-ops": 0
   }
 }
