--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "portal-vue": "^1.3.0",
     "quasar-extras": "^2.0.3",
     "quasar-framework": "^0.16.0",
+    "query-string": "^6.1.0",
     "shortid": "^2.2.8",
     "url-safe-string": "^1.1.0",
     "vue": "^2.5.16",
