--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@types/shortid": "0.0.29",
+    "date-fns": "^1.29.0",
     "lodash": "^4.17.10",
     "plotly.js": "^1.38.3",
     "portal-vue": "^1.3.0",
