--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,7 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
+    "src/**/*.svg",
     "tests/**/*.ts",
     "tests/**/*.tsx"
   ],
