--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "quasar-framework": "^0.16.0",
     "query-string": "^6.1.0",
     "shortid": "^2.2.8",
+    "typescript": "^3.0.1",
     "url-safe-string": "^1.1.0",
     "vue": "^2.5.16",
     "vue-class-component": "^6.0.0",
@@ -45,14 +46,14 @@
   "devDependencies": {
     "@types/jest": "^22.0.1",
     "@types/query-string": "^6.1.0",
-    "@vue/cli-plugin-babel": "^3.0.0-rc.3",
-    "@vue/cli-plugin-e2e-cypress": "^3.0.0-rc.3",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.3",
-    "@vue/cli-plugin-typescript": "^3.0.0-rc.3",
-    "@vue/cli-plugin-unit-jest": "^3.0.0-rc.3",
-    "@vue/cli-service": "^3.0.0-rc.3",
-    "@vue/eslint-config-airbnb": "^3.0.0-rc.3",
-    "@vue/eslint-config-typescript": "^3.0.0-rc.3",
+    "@vue/cli-plugin-babel": "^3.0.0-rc.10",
+    "@vue/cli-plugin-e2e-cypress": "^3.0.0-rc.10",
+    "@vue/cli-plugin-eslint": "^3.0.0-rc.10",
+    "@vue/cli-plugin-typescript": "^3.0.0-rc.10",
+    "@vue/cli-plugin-unit-jest": "^3.0.0-rc.10",
+    "@vue/cli-service": "^3.0.0-rc.10",
+    "@vue/eslint-config-airbnb": "^3.0.0-rc.10",
+    "@vue/eslint-config-typescript": "^3.0.0-rc.10",
     "@vue/test-utils": "^1.0.0-beta.10",
     "babel-core": "^7.0.0-0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
