--- a/.travis.yml
+++ b/.travis.yml
@@ -24,16 +24,21 @@ before_deploy:
   docker run --rm --privileged multiarch/qemu-user-static:register --reset;
 
 deploy:
-  # Deploy "latest" and version tag to Docker Hub on tagged commits
+  # Deploy AMD "rpi-latest" and version tag to Docker Hub on tagged commits
   - provider: script
     script:
-      # AMD
       docker build --no-cache -t ${DOCKER_REPO}:amd -f docker/amd/Dockerfile docker;
       docker tag ${DOCKER_REPO}:amd ${DOCKER_REPO}:latest;
       docker push ${DOCKER_REPO}:latest;
       docker tag ${DOCKER_REPO}:amd ${DOCKER_REPO}:$(git describe --tags);
       docker push ${DOCKER_REPO}:$(git describe --tags);
-      # ARM
+    skip_cleanup: true
+    on:
+      tags: true
+
+  # Deploy ARM "rpi-latest" and version tag to Docker Hub on tagged commits
+  - provider: script
+    script:
       docker build --no-cache -t ${DOCKER_REPO}:arm -f docker/arm/Dockerfile docker;
       docker tag ${DOCKER_REPO}:arm ${DOCKER_REPO}:rpi-latest;
       docker push ${DOCKER_REPO}:rpi-latest;
@@ -43,14 +48,22 @@ deploy:
     on:
       tags: true
 
-  # Deploy branch to Docker Hub on any push to an upstream development branch
+  # Deploy AMD branch to Docker Hub on any push to an upstream development branch
   - provider: script
     script:
-      # AMD
       docker build --no-cache -t ${DOCKER_REPO}:amd -f docker/amd/Dockerfile docker;
       docker tag ${DOCKER_REPO}:amd ${DOCKER_REPO}:${TRAVIS_BRANCH};
       docker push ${DOCKER_REPO}:${TRAVIS_BRANCH};
-      # ARM
+    skip_cleanup: true
+    on:
+      tags: false
+      repo: ${GITHUB_REPO}
+      all_branches: true
+      condition: ${TRAVIS_BRANCH} != master
+
+  # Deploy ARM branch to Docker Hub on any push to an upstream development branch
+  - provider: script
+    script:
       docker build --no-cache -t ${DOCKER_REPO}:arm -f docker/arm/Dockerfile docker;
       docker tag ${DOCKER_REPO}:arm ${DOCKER_REPO}:rpi-${TRAVIS_BRANCH};
       docker push ${DOCKER_REPO}:rpi-${TRAVIS_BRANCH};
