--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - "traefik.frontend.rule=PathPrefix: /history"
 
   spark:
-    image: brewblox/brewblox-devcon-spark:develop
+    image: brewblox/brewblox-devcon-spark:feature-improve-api-errors
     depends_on:
       - eventbus
     labels:
@@ -30,6 +30,7 @@ services:
       - "./mocks/config/seed_objects.json:/app/seed_objects.json"
     command:
       - "--simulation"
+      - "--debug"
       - "--seed-profiles=0"
       - "--seed-objects=seed_objects.json"
 
