--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@types/shortid": "0.0.29",
     "date-fns": "^1.29.0",
     "lodash": "^4.17.10",
-    "plotly.js": "^1.38.3",
+    "plotly.js": "^1.39.4",
     "portal-vue": "^1.3.0",
     "quasar-extras": "^2.0.3",
     "quasar-framework": "^0.16.0",
@@ -46,14 +46,14 @@
   "devDependencies": {
     "@types/jest": "^22.0.1",
     "@types/query-string": "^6.1.0",
-    "@vue/cli-plugin-babel": "^3.0.0-rc.10",
-    "@vue/cli-plugin-e2e-cypress": "^3.0.0-rc.10",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.10",
-    "@vue/cli-plugin-typescript": "^3.0.0-rc.10",
-    "@vue/cli-plugin-unit-jest": "^3.0.0-rc.10",
-    "@vue/cli-service": "^3.0.0-rc.10",
-    "@vue/eslint-config-airbnb": "^3.0.0-rc.10",
-    "@vue/eslint-config-typescript": "^3.0.0-rc.10",
+    "@vue/cli-plugin-babel": "^3.0.0",
+    "@vue/cli-plugin-e2e-cypress": "^3.0.0",
+    "@vue/cli-plugin-eslint": "^3.0.0",
+    "@vue/cli-plugin-typescript": "^3.0.0",
+    "@vue/cli-plugin-unit-jest": "^3.0.0",
+    "@vue/cli-service": "^3.0.0",
+    "@vue/eslint-config-airbnb": "^3.0.0",
+    "@vue/eslint-config-typescript": "^3.0.0",
     "@vue/test-utils": "^1.0.0-beta.10",
     "babel-core": "^7.0.0-0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
