--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     image: brewblox/brewblox-datastore:develop
     labels:
       - "traefik.port=3000"
-      - "traefik.frontend.rule=PathPrefix: /datastore"
+      - "traefik.frontend.rule=PathPrefixStrip: /datastore/"
     volumes:
       - "./mocks/config/datastore.json:/app/datastore.json"
     command:
