--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "description": "UI for the BrewBlox brewing controller",
   "author": "Elco Jacobs / BrewPi B.V.",
+  "repository": "https://github.com/BrewBlox/brewblox-ui",
+  "license": "GPL-3.0",
   "scripts": {
     "compose:down": "docker-compose down",
     "compose:up": "docker-compose up -d",
@@ -24,45 +26,45 @@
   "dependencies": {
     "@types/shortid": "0.0.29",
     "date-fns": "^1.29.0",
-    "lodash": "^4.17.10",
-    "plotly.js": "^1.39.4",
+    "lodash": "^4.17.11",
+    "plotly.js": "^1.41.0",
     "portal-vue": "^1.3.0",
-    "quasar-extras": "^2.0.3",
-    "quasar-framework": "^0.16.0",
+    "quasar-extras": "^2.0.6",
+    "quasar-framework": "^0.17.14",
     "query-string": "^6.1.0",
-    "shortid": "^2.2.8",
-    "typescript": "^3.0.1",
+    "shortid": "^2.2.13",
+    "typescript": "^3.0.3",
     "url-safe-string": "^1.1.0",
-    "vue": "^2.5.16",
+    "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
-    "vue-i18n": "^7.6.0",
+    "vue-i18n": "^8.1.0",
     "vue-plotly.js": "^1.1.0",
-    "vue-property-decorator": "^6.0.0",
+    "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
-    "vue-svg-loader": "^0.5.0",
+    "vue-svg-loader": "^0.9.0",
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1",
     "vuex-typescript": "^3.0.2"
   },
   "devDependencies": {
-    "@types/jest": "^22.0.1",
+    "@types/jest": "^23.3.2",
     "@types/query-string": "^6.1.0",
-    "@vue/cli-plugin-babel": "^3.0.0",
-    "@vue/cli-plugin-e2e-cypress": "^3.0.0",
-    "@vue/cli-plugin-eslint": "^3.0.0",
-    "@vue/cli-plugin-typescript": "^3.0.0",
-    "@vue/cli-plugin-unit-jest": "^3.0.0",
-    "@vue/cli-service": "^3.0.0",
-    "@vue/eslint-config-airbnb": "^3.0.0",
-    "@vue/eslint-config-typescript": "^3.0.0",
-    "@vue/test-utils": "^1.0.0-beta.10",
+    "@vue/cli-plugin-babel": "^3.0.3",
+    "@vue/cli-plugin-e2e-cypress": "^3.0.3",
+    "@vue/cli-plugin-eslint": "^3.0.3",
+    "@vue/cli-plugin-typescript": "^3.0.3",
+    "@vue/cli-plugin-unit-jest": "^3.0.3",
+    "@vue/cli-service": "^3.0.3",
+    "@vue/eslint-config-airbnb": "^3.0.3",
+    "@vue/eslint-config-typescript": "^3.0.3",
+    "@vue/test-utils": "^1.0.0-beta.25",
     "babel-core": "^7.0.0-0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "ts-jest": "^22.4.6",
-    "tslint-config-airbnb": "^5.8.0",
-    "vue-template-compiler": "^2.5.13"
+    "ts-jest": "^23.1.4",
+    "tslint-config-airbnb": "^5.11.0",
+    "vue-template-compiler": "^2.5.17"
   },
   "browserslist": [
     "> 1%",
