--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
     "paths": {
       "@/*": [
         "src/*"
+      ],
+      "@spark/*": [
+        "src/services/spark/*"
       ]
     }
   },
