--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "compose:down": "docker-compose down",
     "compose:up": "docker-compose up -d",
     "compose:new": "npm run compose:down && npm run compose:up",
-    "serve": "npm run compose:new && vue-cli-service serve --open",
+    "serve": "npm run compose:new && vue-cli-service serve",
     "start": "npm run serve",
     "build": "vue-cli-service build",
     "test": "jest",
@@ -24,7 +24,6 @@
     "npm": ">= 5.6.0"
   },
   "dependencies": {
-    "@types/shortid": "0.0.29",
     "date-fns": "^1.29.0",
     "lodash": "^4.17.11",
     "plotly.js": "^1.41.0",
@@ -48,7 +47,9 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.2",
+    "@types/plotly.js": "^1.38.8",
     "@types/query-string": "^6.1.0",
+    "@types/shortid": "0.0.29",
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-plugin-e2e-cypress": "^3.0.3",
     "@vue/cli-plugin-eslint": "^3.0.3",
