--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "date-fns": "^1.29.0",
     "lodash": "^4.17.11",
+    "parse-duration": "^0.1.1",
     "plotly.js": "^1.41.0",
     "portal-vue": "^1.3.0",
     "quasar-extras": "^2.0.6",
