--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "repository": "https://github.com/BrewBlox/brewblox-ui",
   "license": "GPL-3.0",
   "scripts": {
+    "spark:obj": "cat mocks/config/seed_objects.json | mocks/reset-objects.sh",
+    "spark:sparkey": "npm run spark:obj -- http://localhost:9000/sparkey",
+    "spark:spock": "npm run spark:obj -- http://localhost:9000/spock",
+    "spark:reset": "npm run spark:sparkey && npm run spark:spock",
     "compose:down": "docker-compose down",
     "compose:up": "docker-compose up -d",
-    "compose:new": "npm run compose:down && npm run compose:up",
+    "compose:new": "npm run compose:down && npm run compose:up && npm run spark:reset",
     "serve": "npm run compose:new && vue-cli-service serve",
     "start": "npm run serve",
     "build": "vue-cli-service build",
