--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
     "paths": {
       "@/*": [
         "src/*"
+      ],
+      "plotly.js": [
+        "../node_modules/plotly.js-basic-dist"
       ]
     }
   },
