--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,7 @@
     // for eslint + typescript to work:
     "typescript/no-unused-vars": 1,
     "space-infix-ops": 0,
-    "indent": 0
+    "indent": 0,
+    "no-redeclare": 0
   }
 }
