--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "compose:down": "docker-compose down",
     "compose:up": "docker-compose up -d",
     "compose:new": "npm run compose:down && npm run compose:up && npm run spark:reset",
-    "serve": "npm run compose:new && vue-cli-service serve",
-    "start": "npm run serve",
+    "serve": "vue-cli-service serve",
+    "start": "npm run compose:new && npm run serve",
     "build": "vue-cli-service build",
     "test": "jest",
     "e2e": "npm run compose:new && vue-cli-service test:e2e --mode development",
@@ -31,19 +31,19 @@
     "date-fns": "^1.29.0",
     "lodash": "^4.17.11",
     "parse-duration": "^0.1.1",
-    "plotly.js": "^1.41.0",
-    "portal-vue": "^1.3.0",
-    "quasar-extras": "^2.0.6",
-    "quasar-framework": "^0.17.14",
-    "query-string": "^6.1.0",
-    "shortid": "^2.2.13",
-    "typescript": "^3.0.3",
+    "plotly.js-basic-dist": "^1.42.5",
+    "portal-vue": "^1.4.0",
+    "quasar-extras": "^2.0.9",
+    "quasar-framework": "^0.17.18",
+    "query-string": "^6.2.0",
+    "shortid": "^2.2.14",
+    "typescript": "^3.1.6",
     "url-safe-string": "^1.1.0",
     "vue": "^2.5.17",
-    "vue-class-component": "^6.0.0",
-    "vue-i18n": "^8.1.0",
+    "vue-class-component": "^6.3.2",
+    "vue-i18n": "^8.3.1",
     "vue-plotly.js": "^1.1.0",
-    "vue-property-decorator": "^7.0.0",
+    "vue-property-decorator": "^7.2.0",
     "vue-router": "^3.0.1",
     "vue-svg-loader": "^0.9.0",
     "vuedraggable": "^2.16.0",
@@ -51,26 +51,26 @@
     "vuex-typescript": "^3.0.2"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.2",
-    "@types/plotly.js": "^1.38.8",
-    "@types/query-string": "^6.1.0",
+    "@types/jest": "^23.3.9",
+    "@types/plotly.js": "^1.38.13",
+    "@types/query-string": "^6.1.1",
     "@types/shortid": "0.0.29",
-    "@types/webpack": "^4.4.17",
+    "@types/webpack": "^4.4.18",
     "@types/webpack-env": "^1.13.6",
-    "@vue/cli-plugin-babel": "^3.0.3",
-    "@vue/cli-plugin-e2e-cypress": "^3.0.3",
-    "@vue/cli-plugin-eslint": "^3.0.3",
-    "@vue/cli-plugin-typescript": "^3.0.3",
-    "@vue/cli-plugin-unit-jest": "^3.0.3",
-    "@vue/cli-service": "^3.0.3",
-    "@vue/eslint-config-airbnb": "^3.0.3",
-    "@vue/eslint-config-typescript": "^3.0.3",
+    "@vue/cli-plugin-babel": "^3.1.1",
+    "@vue/cli-plugin-e2e-cypress": "^3.1.1",
+    "@vue/cli-plugin-eslint": "^3.1.4",
+    "@vue/cli-plugin-typescript": "^3.1.1",
+    "@vue/cli-plugin-unit-jest": "^3.1.1",
+    "@vue/cli-service": "^3.1.3",
+    "@vue/eslint-config-airbnb": "^3.0.5",
+    "@vue/eslint-config-typescript": "^3.1.1",
     "@vue/test-utils": "^1.0.0-beta.25",
     "babel-core": "^7.0.0-0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "ts-jest": "^23.1.4",
+    "ts-jest": "^23.10.4",
     "tslint-config-airbnb": "^5.11.0",
     "vue-template-compiler": "^2.5.17"
   },
