Add plotly factory directly

--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,7 @@
     "typescript/no-unused-vars": 1,
     "space-infix-ops": 0,
     "indent": 0,
-    "no-redeclare": 0
+    "no-redeclare": 0,
+    "no-shadow": 0
   }
 }
