--- a/.eslintrc
+++ b/.eslintrc
@@ -1,16 +1,5 @@
 {
   "root": true,
-  "parserOptions": {
-    "parser": "typescript-eslint-parser"
-  },
-  "extends": [
-    "plugin:vue/essential",
-    "@vue/airbnb",
-    "@vue/typescript"
-  ],
-  "plugins": [
-    "typescript"
-  ],
   "rules": {
     "import/first": 0,
     "import/named": 2,
@@ -22,22 +11,15 @@
     "import/no-extraneous-dependencies": 0,
     "import/prefer-default-export": 0,
     "import/newline-after-import": 0,
-    "max-len": [1, 120, 2, {
-      "ignoreUrls": true,
-      "ignoreComments": false
-    }],
-    // vue specific rules
-    "class-methods-use-this": 0,
-    "strict": 0,
-    "no-param-reassign": 0,
-    "no-restricted-globals": 0,
-    // allow debugger during development
     "no-debugger": 2,
-    // for eslint + typescript to work:
-    "typescript/no-unused-vars": 1,
-    "space-infix-ops": 0,
-    "no-redeclare": 0,
-    "no-shadow": 0,
-    "indent": 0
+    "max-len": [
+      1,
+      120,
+      2,
+      {
+        "ignoreUrls": true,
+        "ignoreComments": false
+      }
+    ]
   }
 }
