implement graph form

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,10 @@
 {
   "root": true,
+  "parserOptions": {
+    "ecmaVersion": 2018
+  },
   "rules": {
     "import/first": 0,
-    "import/named": 2,
-    "import/namespace": 2,
-    "import/default": 2,
-    "import/export": 2,
     "import/extensions": 0,
     "import/no-unresolved": 0,
     "import/no-extraneous-dependencies": 0,
