--- a/package.json
+++ b/package.json
@@ -47,8 +47,7 @@
     "vue-router": "^3.0.1",
     "vue-svg-loader": "^0.9.0",
     "vuedraggable": "^2.16.0",
-    "vuex": "^3.0.1",
-    "vuex-typescript": "^3.0.2"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@types/jest": "^23.3.9",
