--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "stylus-loader": "^3.0.1",
     "ts-jest": "^23.10.4",
     "tslint-config-airbnb": "^5.11.1",
+    "tsutils": "^3.5.0",
     "vue-template-compiler": "^2.5.17"
   },
   "browserslist": [
