--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "e2e": "npm run compose:new && vue-cli-service test:e2e --mode development",
     "tslint": "tslint -c tslint.json 'src/**/*.ts'",
     "eslint": "eslint src --ext .js",
-    "lint": "npm run tslint && npm run eslint",
+    "lint": "npm run tslint",
     "e2e:open": "vue-cli-service e2e:open"
   },
   "engines": {
