use full influxdb lib

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: rabbitmq:alpine
 
   influx:
-    image: influxdb:alpine
+    image: influxdb
     volumes:
     - "./influxdb:/var/lib/influxdb"
 
