--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "@vue/test-utils": "^1.0.0-beta.25",
     "babel-core": "^7.0.0-0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "git-describe": "^4.0.3",
+    "semver": "^5.6.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "ts-jest": "^23.10.4",
