--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "repository": "https://github.com/BrewBlox/brewblox-ui",
   "license": "GPL-3.0",
   "scripts": {
-    "spark:obj": "bash mocks/reset-objects.sh mocks/config/seed_objects.json",
+    "spark:obj": "bash app/reset-objects.sh app/presets/spark_objects.json",
     "spark:sparkey": "npm run spark:obj -- sparkey",
     "spark:spock": "npm run spark:obj -- spock",
     "spark:reset": "npm run spark:sparkey && npm run spark:spock",
+    "couchdb:cors": "bash app/enable_cors.sh",
     "compose:down": "docker-compose down",
     "compose:up": "docker-compose up -d",
-    "compose:new": "npm run compose:down && npm run compose:up && npm run spark:reset",
+    "compose:new": "npm run compose:down && npm run compose:up && npm run spark:reset && npm run couchdb:cors",
     "serve": "vue-cli-service serve",
     "start": "npm run compose:new && npm run serve",
     "build": "vue-cli-service build",
@@ -34,6 +35,7 @@
     "parse-duration": "^0.1.1",
     "plotly.js-basic-dist": "^1.42.5",
     "portal-vue": "^1.4.0",
+    "pouchdb": "^7.0.0",
     "quasar-extras": "^2.0.9",
     "quasar-framework": "^0.17.18",
     "query-string": "^6.2.0",
@@ -52,6 +54,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.9",
     "@types/plotly.js": "^1.41.0",
+    "@types/pouchdb": "^6.3.2",
     "@types/query-string": "^6.1.1",
     "@types/shortid": "0.0.29",
     "@types/webpack": "^4.4.19",
